--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -6,7 +6,7 @@
 
 {% if site.owner.email %}<p style="text-indent:0;margin-top:1.5em;"><a href="mailto:{{ site.owner.email }}" target="_blank"><i class="icon-mail"></i> Email</a></p>{% endif %}
 
-{% if site.owner.cv %}<p style="text-indent:0;"><a href="{{ site.owner.cv }}"><i class="icon-file-text"></i>My CV</a></p>{% endif %}
+{% if site.owner.cv %}<p style="text-indent:0;"><a href="{{ site.owner.cv }}"><i class="icon-file"></i>My CV</a></p>{% endif %}
 
 {% if site.owner.twitter %}<p style="text-indent:0;"><a href="https://twitter.com/{{ site.owner.twitter }}"><i class="icon-twitter"></i> X </a></p>{% endif %}
 
