--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -8,7 +8,9 @@
 
 {% if site.owner.cv %}<p style="text-indent:0;"><a href="{{ site.owner.cv }}"><img src="https://caihanlin.com/images/logo/icons8-cv-100.png" width="17" height="17"></i> My CV</a></p>{% endif %}
 
-{% if site.owner.twitter %}<p style="text-indent:0;"><a href="https://twitter.com/{{ site.owner.twitter }}"><i class="icon-twitter"></i> X </a></p>{% endif %}
+{% if site.owner.twitter %}<p style="text-indent:0;"><a href="https://x.com/{{ site.owner.twitter }}"><i class="icon-twitter"></i> X </a></p>{% endif %}
+
+{% if site.owner.twitter %}<p style="text-indent:0;"><a href="https://t.me/{{ site.owner.telegram }}"><i class="icon-twitter"></i> Telegram </a></p>{% endif %}
 
 {% if site.owner.linkedin %}<p style="text-indent:0;"><a href="https://linkedin.com/in/{{ site.owner.linkedin }}"><i class="icon-linkedin"></i> LinkedIn</a></p>{% endif %}
 
