--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -10,7 +10,7 @@
 
 {% if site.owner.twitter %}<p style="text-indent:0;"><a href="https://x.com/{{ site.owner.twitter }}"><i class="icon-twitter"></i> X </a></p>{% endif %}
 
-{% if site.owner.twitter %}<p style="text-indent:0;"><a href="https://t.me/{{ site.owner.telegram }}"><i class="icon-twitter"></i> Telegram </a></p>{% endif %}
+{% if site.owner.twitter %}<p style="text-indent:0;"><a href="https://t.me/{{ site.owner.telegram }}"><i class="icon-telegram"></i> Telegram </a></p>{% endif %}
 
 {% if site.owner.linkedin %}<p style="text-indent:0;"><a href="https://linkedin.com/in/{{ site.owner.linkedin }}"><i class="icon-linkedin"></i> LinkedIn</a></p>{% endif %}
 
